# MMAL-Net

./: .gitignore  README.md  app.py  image_label.txt  info.xlsx  model.py  predict.py  pyproject.toml  test.ipynb  test.py  web.py
networks/: model.py  resnet.py
utils/: indices2coordinates.py
