[tool.poetry]
name = "mmal-net"
version = "0.1.0"
description = ""
authors = ["myoun <aiden080605@gmail.com>"]
readme = "README.md"
packages = [{include = "mmal_net"}]

[tool.poetry.dependencies]
python = "3.7.16"
torch = "1.3.1"
numpy = "1.17.3"
scikit-image = "0.16.2"
tensorboard = "1.15.0"
tensorboardx = "2.0"
tqdm = "4.41.1"
imageio = "2.6.1"
pillow = "6.1.0"
torchvision = "0.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
