[tool.poetry]
name = "mmal-net"
version = "0.1.0"
description = ""
authors = ["myoun <aiden080605@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
tqdm = "^4.67.0"
imageio = "^2.36.0"
torchvision = "^0.20.1"
scikit-image = "^0.24.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
